cmake_minimum_required(VERSION 3.15)
project(UnixProgramInterface)

add_subdirectory(lib)
add_subdirectory(chapter4)
add_subdirectory(chapter5)
add_subdirectory(chapter6)
add_subdirectory(chapter10)
add_subdirectory(chapter11)
add_subdirectory(chapter12)
add_subdirectory(chapter13)
add_subdirectory(chapter15)
add_subdirectory(chapter16)
add_subdirectory(chapter18)
add_subdirectory(chapter23)
add_subdirectory(chapter24)
add_subdirectory(chapter25)
add_subdirectory(chapter26)
add_subdirectory(chapter29)
add_subdirectory(chapter30)
add_subdirectory(chapter44)
add_subdirectory(chapter46)
add_subdirectory(chapter48)
add_subdirectory(chapter49)
add_subdirectory(chapter57)
add_subdirectory(chapter59)